reader: Do more strict validation

JsonReader should perform more strict validation, and put itself in an
error state whenever the user asks for values or information on nodes
that are not there, or not of the right type.

https://bugzilla.gnome.org/show_bug.cgi?id=658632